--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2KY1PTH9KF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2KY1PTH9KF');
+</script>
+
 <body>
   <app-root></app-root>
 </body>
