new  analytics key

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2KY1PTH9KF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RTSX4W26L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2KY1PTH9KF');
+  gtag('config', 'G-6RTSX4W26L');
 </script>
 
 <body>
